--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>What Is Alan Eating for Lunch Today?</title>
   <link href='http://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
   <!-- <script type="text/javascript" src="js/jquery.textfill.js"></script> -->
@@ -11,14 +12,24 @@
 
 <body class="init">
 
-    <div class="content">
+    
+    <div class="content mainContent">
       <h1>Lorem ipsum dolor <br> sit amet, alii minimum</h1>
       <!-- <h1>what is alan eating<br>for lunch today?</h1> -->
-      <h2 id="suggestion"></h2>
+      <h2 class="suggestion"></h2>
+    </div>
+    <div class="content alertContent">
+      <h1>mode activated!!!!</h1>
     </div>
 
-    <div class="veg-mode"></div>
-    <div class="pk-mode"></div>
+    <div class="veg-click"></div>
+    <div class="pk-click"></div>
+<!--     <div class="pk-alert">
+      <p class="content">mode activated!!!!</p>
+    </div>
+    <div class="vegan-alert">
+      <p>Vegan mode activated!!!!</p>
+    </div> -->
   
   <!-- <div style="width: 100%; height: 100%;" id="map_canvas"></div> -->
   <!--add attribution please https://developer.foursquare.com/docs/venues/links -->
