v3 is the latest
http://tympanus.net/codrops/2012/06/12/css-only-responsive-layout-with-s
mooth-transitions/

--- a/index2.html
+++ b/index2.html
@@ -2,28 +2,44 @@
 <html>
 
 <head>
-  <title>What Is Alan Eating for Lunch Today?</title>
+  <title>Title</title>
   <link href='http://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/animate.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style2.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
   <!-- <script type="text/javascript" src="js/jquery.textfill.js"></script> -->
 </head>
 
-<body class="init">
+<body>
+  <div class="container">
+    <div class="centering-outer">
+      <div class="centering-middle">
+        <div class="content">
+
+          <h1>The Content</h1>
+
+          <h2>Once upon a midnight dreary...</h2>
+
+        </div>
+      </div>
+    </div>
+    <div class="veg-click"></div>
+    <div class="pk-click"></div>
+  </div>
+
+<!-- <body class="init"> -->
 
     
-    <div class="content mainContent">
-      <h1>Lorem ipsum dolor <br> sit amet, alii minimum</h1>
+    <!-- <div class="content mainContent"> -->
+      <!-- <h1>Lorem ipsum dolor <br> sit amet, alii minimum</h1> -->
       <!-- <h1>what is alan eating<br>for lunch today?</h1> -->
-      <h2 class="suggestion"></h2>
+<!--       <h2 class="suggestion"></h2>
     </div>
     <div class="content alertContent">
       <h1>mode activated!!!!</h1>
-    </div>
+    </div> -->
 
-    <div class="veg-click"></div>
-    <div class="pk-click"></div>
+    
 <!--     <div class="pk-alert">
       <p class="content">mode activated!!!!</p>
     </div>
