--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Title</title>
-  <link href='http://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
   <link rel="stylesheet" type="text/css" href="css/style3.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
@@ -21,17 +21,20 @@
     <div class="scroll">
  
         <section class="panel" id="panel-1">
-            <h1>V Mode Alert</h1>
-            <h2>Banksy adipisicing eiusmod banh mi sed...</h2>
+            <h1>VEGAN MODE</h1>
+            <!-- <h2>Banksy adipisicing eiusmod banh mi sed...</h2> -->
         </section>
          
-        <section class="panel color" id="panel-2">
-            <h1>Lorem ipsum dolor <br> sit amet, alii minimum</h1>
-            <h2><span class="suggestion"></span></h2>
+        <section class="panel" id="panel-2">
+            <h1>
+              <div class="header">What is Alan eating<br> for lunch today</div>
+              <span class="body-text suggestion">something</span>
+              <div><span class="link-out">foursquare</span></div>
+            </h1>
         </section>
 
-        <section class="panel color" id="panel-3">
-            <h1>P Mode Alert</h1>
+        <section class="panel" id="panel-3">
+            <h1>PK MODE</h1>
             <h2>Banksy adipisicing eiusmod banh mi sed...</h2>
         </section>
          
