--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style3.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
-  <script src="js/jquery.sheetrock.min.js" type="text/javascript"></script>
+  <script src="js/jquery.sheetrock.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -18,6 +18,7 @@
         </section>
         <section class="panel" id="panel-2">
             <div class="content">
+              <table id="statistics"></div>
               <div class="icons"></div>
               <div class="header">What is Alan eating<br> for lunch today</div>
               <span class="suggestion">something</span>
