--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Title</title>
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/style3.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
   <script src="js/jquery.sheetrock.js" type="text/javascript"></script>
 </head>
@@ -30,7 +30,7 @@
     <div class="pk-click"></div>
   </div><!-- // container -->
 
-  <script type="text/javascript" src="js/script3.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
   <!-- made using the foursquare API
        https://developer.foursquare.com/docs/venues/links -->
   <!-- <script type="text/javascript" src="js/foursquare.js"></script> -->
