--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Title</title>
+  <title>What is Alan Eating for Lunch Today</title>
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
@@ -18,10 +18,9 @@
         </section>
         <section class="panel" id="panel-2">
             <div class="content">
-              <table id="statistics"></div>
               <div class="icons"></div>
               <div class="header">What is Alan eating<br> for lunch today</div>
-              <span class="suggestion">something</span>
+              <span class="suggestion">waiting...</span>
               <div><span class="foursquare">foursquare</span></div>
             </div>
         </section
@@ -29,6 +28,7 @@
     <div class="veg-click"></div>
     <div class="pk-click"></div>
   </div><!-- // container -->
+  <table id="sheetrock"></table>
 
   <script type="text/javascript" src="js/script.js"></script>
   <!-- made using the foursquare API
