--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>What is Alan Eating for Lunch Today</title>
+  <title>What's Alan Eating for Lunch Today?</title>
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
@@ -15,20 +15,21 @@
         <section class="panel" id="panel-1">
           <div class="content header alert">
           </div>
+          <img class="doge" src="assets/doge.gif">
         </section>
         <section class="panel" id="panel-2">
             <div class="content">
               <div class="icons"></div>
-              <div class="header">What is Alan eating<br> for lunch today</div>
+              <div class="header">What's Alan eating<br> for lunch today</div>
               <span class="suggestion">waiting...</span>
-              <div><span class="foursquare">foursquare</span></div>
+              <div><span class="foursquare">info</span></div>
             </div>
-        </section
+        </section>
     </div><!-- // scroll -->
     <div class="veg-click"></div>
     <div class="pk-click"></div>
   </div><!-- // container -->
-  <table id="sheetrock"></table>
+  <table id="sheetrock" class="invisible"></table>
 
   <script type="text/javascript" src="js/script.js"></script>
   <!-- made using the foursquare API
