--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" id="jquery"></script>
   <script src="js/jquery.sheetrock.js" type="text/javascript"></script>
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
 </head>
 
 <body>
